--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "argon2": "^0.28.2",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.10"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.13"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "server": "nodemon index",
+        "start": "node index"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "argon2": "^0.28.2",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.0.10"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.13"
+    }
 }
